Re corrected Designing Alignment in Switch me Blade

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1600,7 +1600,7 @@ top: -.25em;left: 20%;margin: 0 0 0 -.25em;}
   body {color:#666;}
   .tbl-clr {color:#fff; }
   .tbl-clr td {text-align:center;}
-  .transfer-cal {padding:10px;color:#666; text-align:center;margin-bottom:0px;}
+  .transfer-cal {padding:10px;color:#666; text-align:center;}
    .rw-hei p {font-size:16px;color:#999;}
    .rw-hei h1 {margin-top:10px;}
    .sub-title {color:#999;}
